--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
@@ -4,12 +4,13 @@
 
 .col-md-8.job-status
   #job
-    .lead= @dirmon_entry.job_name
+    .lead= @dirmon_entry.job_name + "#{'#' + @dirmon_entry.perform_method.to_s unless @dirmon_entry.perform_method == :perform }"
 
     .job-state.inline-block
-      .left active
-      .right{ class: @dirmon_entry.enabled.to_s }
-        = @dirmon_entry.enabled
+      .left status
+      - state = @dirmon_entry.enabled ? 'enabled' : 'disabled'
+      .right{ class: state }
+        = state
 
     .job-retry.btn-group.pull-right{ style: 'margin-right: 1em;' }
       = link_to "Destroy", dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', :data => { :confirm => 'Are you sure?' }
