--- a/app/assets/stylesheets/rocket_job_mission_control/dirmon_entries.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/dirmon_entries.scss
@@ -1,7 +1,8 @@
 
 .buttons{
   padding-top: 1cm;
-  padding-left: 3cm;
+  padding-left: 4cm;
+  text-align: center
 }
 
 .buttons2{
@@ -15,9 +16,18 @@
 }
 
 .title1{
-  padding-left: 5cm;
+  text-align: center;
+  padding-left: 4cm;
 }
 
 .title2{
+  padding-left: 6cm;
+}
+
+.properties{
+  padding-left: 6cm;
+}
+
+.label{
   padding-left: 6cm;
 }
