--- a/app/views/rocket_job_mission_control/dirmon_entries/edit.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/edit.html.haml
@@ -3,8 +3,9 @@
   = render partial: 'list', locals: { jobs: @jobs }
 
 .col-md-5
-  .title1.h3
-    Edit
+  .title1.h2
+    Edit Dirmon Entry
+.col-md-5
   = form_for @dirmon_entry, url: dirmon_entry_path, method: :patch do |f|
     = f.clarity_text_field :name, required: true
     = f.clarity_text_field :path, required: true
@@ -13,15 +14,28 @@
     .row
       .col-md-12
         .arguments
-          = render 'arguments'
+          = f.fields_for :properties do |x|
+            = x.clarity_text_field :description, value: @dirmon_entry.properties[:description], placeholder: "max length: 128"
+            = x.clarity_text_field :priority, value: @dirmon_entry.properties[:priority], placeholder: "e.g 1..100"
+            = x.clarity_text_field :login, value: @dirmon_entry.properties[:login], placeholder: "max 128 chars"
+            = x.clarity_text_field :location_ids, value: @dirmon_entry.properties[:location_ids], placeholder: "e.g 301,302,303"
+            = x.clarity_text_field :output_path, value: @dirmon_entry.properties[:output_path], placeholder: "max length: 1024"
+            = x.clarity_text_field :encrypt_output_file, value: @dirmon_entry.properties[:encrypt_output_file], placeholder: "true/false"
     .buttons
-      = f.submit :class => "btn btn-primary"
+      = f.submit 'Edit Dirmon', :class => "btn btn-primary"
       = link_to 'Cancel', url_for(action: :index), class: 'btn btn-default'
-      = button_tag 'Properties', class: 'btn btn-default', id: 'expand'
+      = button_tag 'Properties',type: 'button', class: 'btn btn-default', id: 'expand'
+      = button_tag 'Collapse',type: 'button', class: 'btn btn-default', id: 'collapse'
 
 :coffee
-   $(document).ready ->
-    $('.col-md-12').hide()
-   $('#expand').click ->
-       $('.buttons').hide()
-       $('.col-md-12').show()
+    $(document).ready ->
+     $('.col-md-12').hide()
+     $('#collapse').hide()
+    $('#expand').click ->
+     $('#expand').hide()
+     $('#collapse').show()
+     $('.col-md-12').show()
+    $('#collapse').click ->
+     $('.col-md-12').hide()
+     $('#collapse').hide()
+     $('#expand').show()
