--- a/app/views/rocket_job_mission_control/dirmon_entries/edit.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/edit.html.haml
@@ -10,7 +10,7 @@
     = f.clarity_text_field :name, required: true
     = f.clarity_text_field :path, required: true
     = f.clarity_text_field :job_name, required: true
-    = f.clarity_text_area :arguments, rows: 10
+    = f.clarity_text_area :arguments, rows: 10, placeholder: '{"argument1"":"value1", "argument2":"value2", "argument3":"value3"}'
     .row
       .col-md-12
         .arguments
