--- a/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
@@ -1,4 +1,9 @@
 .col-md-4.job-list
+  .list-top
+    %ol.breadcrumb
+      %li= link_to(job_title(@job), job_path(@job))
+      %li.active Failures
+  .clearfix
   .list
     - @slice_errors.each do |slice_error|
       = link_to(job_failures_path(@job, error_type: slice_error['_id']['error_class']), class: "card callout") do
@@ -12,7 +17,7 @@
 
 - if @failure_exception
   .col-md-8.job-status
-    .thing
+    .failures
       .lead= @failure_exception['class_name']
       .pagination.pull-right= render partial: 'pagination', locals: { error_type: @failure_exception['class_name'], pagination: @pagination }
 
