--- a/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
@@ -27,5 +27,5 @@
         %code= @failure_exception['message']
     .error
       - @failure_exception['backtrace'].each do |line|
-        %pre.small
+        %pre
           .stack-trace.small=line
