--- a/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/failures/index.html.haml
@@ -26,6 +26,4 @@
       %pre
         %code= @failure_exception['message']
     .error
-      - @failure_exception['backtrace'].each do |line|
-        %pre
-          .stack-trace.small=line
+      %pre.small= @failure_exception['backtrace'].join("\n")
