Cleanup some button styling.

--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -3,6 +3,13 @@
   overflow: hidden;
 }
 
+.footer {
+  position: relative;
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+}
+
 body.rocket_job {
   padding: 0;
 
@@ -41,12 +48,18 @@ body.rocket_job {
       p { font-size: 16px; }
     }
 
-    .job-retry {
+    .job-actions {
       float: left;
       margin-top: 23px;
       margin-left: 20px;
 
       .btn { padding: 2px 6px; }
+    }
+
+    .pagination-buttons {
+      float: left;
+      margin-top: 23px;
+      margin-left: 20px;
     }
 
     .job-state {
