--- a/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
@@ -2,40 +2,7 @@
 
   = render partial: 'list', locals: { jobs: @jobs }
 
-.col-md-5
-  .title1.h2
-    New Dirmon Entry
-.col-md-5
-  = form_for :rocket_job_dirmon_entry, url: {action: "create"} do |f|
-    = f.clarity_text_field :name, required: true
-    = f.clarity_text_field :path, required: true
-    = f.clarity_text_field :job_name, required: true
-    = f.clarity_text_area :arguments, rows: 10, placeholder: '{"argument1"":"value1", "argument2":"value2", "argument3":"value3"}'
-    .row
-      .col-md-12
-        .arguments
-          = f.fields_for :properties do |x|
-            = x.clarity_text_field :description, value: @dirmon_entry.properties[:description], placeholder: "max length: 128"
-            = x.clarity_text_field :priority, value: @dirmon_entry.properties[:priority], placeholder: "e.g 1..100"
-            = x.clarity_text_field :login, value: @dirmon_entry.properties[:login], placeholder: "max 128 chars"
-            = x.clarity_text_field :location_ids, value: @dirmon_entry.properties[:location_ids], placeholder: "e.g 301,302,303"
-            = x.clarity_text_field :output_path, value: @dirmon_entry.properties[:output_path], placeholder: "max length: 1024"
-            = x.clarity_text_field :encrypt_output_file, value: @dirmon_entry.properties[:encrypt_output_file], placeholder: "true/false"
-    .buttons
-      = f.submit 'Save Dirmon', :class => "btn btn-primary"
-      = link_to 'Cancel', url_for(action: :index), class: 'btn btn-default'
-      = button_tag 'Properties',type: 'button', class: 'btn btn-default', id: 'expand'
-      = button_tag 'Collapse',type: 'button', class: 'btn btn-default', id: 'collapse'
+.col-md-6
+  .lead New Dirmon Entry
 
-:coffee
-   $(document).ready ->
-    $('.col-md-12').hide()
-    $('#collapse').hide()
-   $('#expand').click ->
-    $('#expand').hide()
-    $('#collapse').show()
-    $('.col-md-12').show()
-   $('#collapse').click ->
-    $('.col-md-12').hide()
-    $('#collapse').hide()
-    $('#expand').show()
+  = render partial: 'form'
