Use Updated DirmonEntry rename path to pattern rename job_name to job_class_name

--- a/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
@@ -23,4 +23,4 @@
                 %i.fa{class: job_state_icon(state), style: 'font-size: 75%;', title: state}
                 = dirmon.name
 
-            .description= dirmon.path.try(:truncate, 80)
+            .description= dirmon.pattern.try(:truncate, 80)
