--- a/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
@@ -2,8 +2,11 @@
   %label Name:
   = @dirmon_entry.name
 %div
-  %label Path:
-  = @dirmon_entry.path
+  %label Pattern:
+  = @dirmon_entry.pattern
+%div
+  %label Job Class Name:
+  = @dirmon_entry.job_class_name
 %div
   %label Archive Directory:
   = @dirmon_entry.archive_directory
