--- a/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
@@ -10,11 +10,11 @@
     = f.label :name
     = f.text_field :name, class: 'form-control'
   .path.form-group
-    = f.label :path
-    = f.text_field :path, class: 'form-control'
+    = f.label :pattern
+    = f.text_field :pattern, class: 'form-control'
   .job.form-group
-    = f.label :job_name
-    = f.text_field :job_name, class: 'form-control'
+    = f.label :job_class_name
+    = f.text_field :job_class_name, class: 'form-control'
   .job_arguments.form-group
     = f.label :arguments
     = f.text_area :arguments, rows: 10, placeholder: '{"argument1"":"value1", "argument2":"value2", "argument3":"value3"}', class: 'form-control'
