--- a/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
@@ -1,3 +1,7 @@
+$border-radius-small: 2px;
+$border-radius-base:  3px;
+$border-radius-large: 4px;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
