--- a/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
@@ -3,8 +3,14 @@
     margin-bottom: 0px;
   }
 
-  .filter {
-    padding: 1px 1px 1px 1px;
+  padding: 1px 1px 1px 1px;
+
+  .breadcrumb {
+    padding: 2px;
+
+    > li {
+      margin: 5px 0 0 5px;
+    }
   }
 
   .list {
