--- a/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
@@ -1,13 +1,17 @@
 .col-md-4.job-list
-  .filter.btn-group.btn-group-justified{ style: 'padding: 1px 1px 1px 1px;', data: { toggle: 'buttons' } }
-    = link_to "Create", dirmon_entries_new_path(@dirmon_entry), method: :post, class: "btn btn-default"
-    - [:enabled, :disabled].each do |state|
-      - enabled = @states.include?(state.to_s) || @states.empty?
-      - title   = enabled ? 'Hide' : 'Show'
-      %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.to_s.capitalize}" }
-        = check_box_tag(state.to_s, state.to_s, enabled)
-        %i.fa{class: job_state_icon(state)}
-  .clearfix
+  .filter
+    %ol.breadcrumb
+      %li.active Dirmon Entries
+      .pull-right
+        = link_to "Create", new_dirmon_entry_path, class: "btn btn-default"
+        .btn-group{ data: { toggle: 'buttons' } }
+          - [:enabled, :disabled].each do |state|
+            - enabled = @states.include?(state.to_s) || @states.empty?
+            - title   = enabled ? 'Hide' : 'Show'
+            %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.to_s.capitalize}" }
+              = check_box_tag(state.to_s, state.to_s, enabled)
+              %i.fa{class: job_state_icon(state)}
+      .clearfix
   .list
     - if @dirmons.empty?
       .card.inner
@@ -15,7 +19,7 @@
           .lead.text-center No Dirmon Entries Found.
     - else
       - @dirmons.each do |dirmon|
-        - state = dirmon.enabled ? :enabled : :disabled
+        - state = dirmon.enabled? ? :enabled : :disabled
         = link_to dirmon_entry_path(id: dirmon.id, states: @states), class: "card callout callout-#{state} #{job_selected_class(dirmon, @dirmon_entry)}" do
           .inner
             .title
