--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -1,12 +1,15 @@
 .col-md-4.job-list
-  .filter.btn-group.btn-group-justified.list-top{ data: { toggle: 'buttons' } }
-    - job_states.each do |state|
-      - enabled = @states.include?(state.to_s) || @states.empty?
-      - title   = enabled ? 'Hide' : 'Show'
-      %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.capitalize}" }
-        = check_box_tag(state, state, enabled)
-        %i.fa{class: job_state_icon(state)}
-  .clearfix
+  .filter
+    %ol.breadcrumb
+      %li.active Jobs
+      .btn-group.pull-right{ data: { toggle: 'buttons' } }
+        - job_states.each do |state|
+          - enabled = @states.include?(state.to_s) || @states.empty?
+          - title   = enabled ? 'Hide' : 'Show'
+          %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.capitalize}" }
+            = check_box_tag(state, state, enabled)
+            %i.fa{class: job_state_icon(state)}
+      .clearfix
   .list
     - if jobs.empty?
       .card.inner
