--- a/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
@@ -5,7 +5,7 @@
       .pull-right
         = link_to "Create", new_dirmon_entry_path, class: "btn btn-default"
         .btn-group{ data: { toggle: 'buttons' } }
-          - [:enabled, :disabled].each do |state|
+          - RocketJob::DirmonEntry.aasm.states.map { |s| s.name.to_s }.each do |state|
             - enabled = @states.include?(state.to_s) || @states.empty?
             - title   = enabled ? 'Hide' : 'Show'
             %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.to_s.capitalize}" }
@@ -20,11 +20,11 @@
     - else
       - @dirmons.each do |dirmon|
         - state = dirmon.enabled? ? :enabled : :disabled
-        = link_to dirmon_entry_path(id: dirmon.id, states: @states), class: "card callout callout-#{state} #{job_selected_class(dirmon, @dirmon_entry)}" do
+        = link_to dirmon_entry_path(id: dirmon.id, states: @states), class: "card callout callout-#{dirmon.state} #{job_selected_class(dirmon, @dirmon_entry)}" do
           .inner
             .title
               .lead
-                %i.fa{class: job_state_icon(state), style: 'font-size: 75%;', title: state}
+                %i.fa{class: job_state_icon(dirmon.state), style: 'font-size: 75%;', title: dirmon.state}
                 = dirmon.name
 
             .description= dirmon.pattern.try(:truncate, 80)
