--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
@@ -1,5 +1,4 @@
 #queue
-
   = render partial: 'list', locals: { jobs: @jobs }
 
 .col-md-8.job-status
@@ -8,16 +7,15 @@
 
     .job-state.inline-block
       .left status
-      - state = @dirmon_entry.enabled? ? 'enabled' : 'disabled'
-      .right{ class: state }
-        = state
+      .right{ class: @dirmon_entry.state }
+        = @dirmon_entry.state
 
     .btn-toolbar.job-actions.pull-right
       .btn-group{ style: 'margin-right: 1em;' }
         = link_to "Destroy", dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', :data => { :confirm => 'Are you sure?' }
-        - if @dirmon_entry.disabled?
+        - if @dirmon_entry.disabled? || @dirmon_entry.pending?
           = link_to "Enable", enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: "btn btn-default"
-        - else
+        - if @dirmon_entry.enabled?
           = link_to "Disable", disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: "btn btn-default", :data => { :confirm => 'Are you sure?' }
       .btn-group
         = link_to "Edit", edit_dirmon_entry_path(@dirmon_entry), method: :get, class: "btn btn-default"
