--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.haml
@@ -18,7 +18,7 @@
         - if @dirmon_entry.enabled?
           = link_to "Disable", disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: "btn btn-default", :data => { :confirm => 'Are you sure?' }
       .btn-group
-        = link_to "Edit", edit_dirmon_entry_path(@dirmon_entry), method: :get, class: "btn btn-default"
+        = link_to "Edit", edit_dirmon_entry_path(@dirmon_entry), class: "btn btn-default"
 
     .clearfix
 
