Add `archive_directory` field to dirmon entry form.

--- a/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
@@ -12,6 +12,9 @@
   .path.form-group
     = f.label :pattern
     = f.text_field :pattern, class: 'form-control'
+  .path.form-group
+    = f.label :archive_directory
+    = f.text_field :archive_directory, class: 'form-control'
   .job.form-group
     = f.label :job_class_name
     = f.text_field :job_class_name, class: 'form-control'
