--- a/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
@@ -5,6 +5,10 @@ $border-radius-large: 4px;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.alert {
+  margin-bottom: 0px;
+}
+
 .alert-notice {
   @extend .alert-info
 }
