--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -1,9 +1,11 @@
-#queue
-  = render partial: 'list', locals: { jobs: @jobs }
+.row
+  #queue
+    = render partial: 'list', locals: { jobs: @jobs }
 
-  .col-md-8.job-status
-    #job
-      .welcome_screen
-        = link_to image_tag('rocket_job_mission_control/rocket-icon-512x512.png'), 'http://rocketjob.io'
-        %h1 Welcome to rocketjob
-        %p High volume, priority based, Enterprise Batch Processing solution for Ruby
+    .col-md-8
+      .job-status
+        #job
+          .welcome_screen
+            = link_to image_tag('rocket_job_mission_control/rocket-icon-512x512.png'), 'http://rocketjob.io'
+            %h1 Welcome to rocketjob
+            %p High volume, priority based, Enterprise Batch Processing solution for Ruby
