Some more styling cleanup.

--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -5,7 +5,7 @@
 
 .footer {
   position: relative;
-  height: 150px;
+  height: 100px;
   clear:both;
   padding-top:20px;
 }
@@ -138,11 +138,18 @@ body.rocket_job {
       text-align: center;
 
       a {
+        display: inline-block;
         color: orange;
         font-weight: bold;
+
       }
 
-      .color {
+      a:hover, a:active {
+        text-decoration: none;
+      }
+
+
+      span {
         display: inline-block;
         position: relative;
         left: -3px;
@@ -445,42 +452,9 @@ body.rocket_job {
     }
   }
 
-  .green.signal {
-    -webkit-animation: greenPulse 2s infinite;
-    -moz-animation: greenPulse 2s infinite;
-    -o-animation: greenPulse 2s infinite;
-    animation: greenPulse 2s infinite;
-    margin: 0 5px 0 10px;
-  }
-
   .code-block { margin-top: 25px; }
 
   .status {
     padding: 1em;
   }
-}
-
-// Rocket Job Animations
-@-webkit-keyframes greenPulse {
-  0% { color: #91bd09; -webkit-box-shadow: 0 0 9px #91bd09; border-radius: 30px; }
-  50% { color: rgb(107, 240, 123); -webkit-box-shadow: 0 0 18px rgb(107, 240, 123); border-radius: 30px; }
-  100% { color: #91bd09; -webkit-box-shadow: 0 0 9px #91bd09; border-radius: 30px; }
-}
-
-@-moz-keyframes greenPulse {
-  0% { background-color: #749a02; -moz-box-shadow: 0 0 9px #333; }
-  50% { background-color: lime; -moz-box-shadow: 0 0 18px #91bd09; }
-  100% { background-color: #749a02; -moz-box-shadow: 0 0 9px #333; }
-}
-
-@-o-keyframes greenPulse {
-  0% { background-color: #749a02; box-shadow: 0 0 9px #749a02; }
-  50% { background-color: #91bd09; box-shadow: 0 0 18px #91bd09; }
-  100% { background-color: #749a02; box-shadow: 0 0 9px #749a02; }
-}
-
-@keyframes greenPulse {
-  0% { background-color: #749a02; box-shadow: 0 0 9px #333; }
-  50% { background-color: #91bd09; box-shadow: 0 0 18px #91bd09; }
-  100% { background-color: #749a02; box-shadow: 0 0 9px #333; }
 }
