--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -13,6 +13,6 @@
 
   .brand
     = link_to root_path, class: 'text-center' do
-      = image_tag('rocket_job_mission_control/rocket-icon-64x64.png', size: '56x32')
+      = image_tag('rocket_job_mission_control/rocket-icon-64x64.png', size: '32x32')
       rocket
-      .color job
+      %span job
