--- a/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_form.html.haml
@@ -18,6 +18,9 @@
   .job.form-group
     = f.label :job_class_name
     = f.text_field :job_class_name, class: 'form-control'
+  .job.form-group
+    = f.label :perform_method
+    = f.text_field :perform_method, class: 'form-control'
   .job_arguments.form-group
     = f.label :arguments
     = f.text_area :arguments,
