Display `perform_method` on DirmonEntry view.

--- a/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
@@ -8,6 +8,9 @@
   %label Job Class Name:
   = @dirmon_entry.job_class_name
 %div
+  %label Perform Method:
+  = @dirmon_entry.perform_method
+%div
   %label Archive Directory:
   = @dirmon_entry.archive_directory
 .parameters
