--- a/app/views/rocket_job_mission_control/workers/index.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index.html.haml
@@ -5,11 +5,11 @@
         %ol.breadcrumb{ style: 'margin-bottom: 0'}
           %li.active Workers
           .btn-group.pull-right
-            - [:stop, :pause, :resume].each do |action|
-              = link_to("#{action.to_s.capitalize} All",
+            - [:stop_all, :pause_all, :resume_all, :destroy_zombies].each do |action|
+              = link_to("#{action.to_s.humanize.capitalize}",
                 rocket_job_mission_control.update_all_workers_path(worker_action: action),
                 method: :patch,
-                data: { confirm: t(:confirm, scope: [:worker, :update_all], action: action) },
+                data: { confirm: t(:confirm, scope: [:worker, :update_all], action: action.to_s.singularize.humanize.downcase) },
                 class: 'btn btn-default')
           .clearfix
 
